--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "phaser-es6-webpack",
+  "name": "phaser-game",
   "version": "2.0.0",
-  "description": "A bootstrap project for create games with Phaser + ES6 + Webpack.",
-  "author": "leandro cabrera <leandcabrera@gmail.com>",
+  "description": "A bootstrap for  phaser games [ES6]",
+  "author": "Tom Wilderspin",
   "main": "index.js",
   "scripts": {
     "start": "webpack",
@@ -14,7 +14,7 @@
     "@babel/preset-env": "^7.0.0",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.2",
-    "browser-sync": "^2.18.13",
+    "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.2.2",
     "eslint": "^5.5.0",
     "eslint-config-standard": "^12.0.0",
@@ -27,7 +27,7 @@
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {
-    "phaser": "^3.0.0-beta.4",
+    "phaser": "^3.0.0",
     "webfontloader": "^1.6.28"
   }
 }
